# ProCas12f1

./: .gitignore  Dockerfile  README.md  main.py
data/: README.md
deep_learning/: .dockerignore  .gitignore  config.ini  pyproject.toml
deep_learning/data/: reference.json
deep_learning/frontend/: index.html  package.json  vite.config.ts
deep_learning/frontend/src/: App.vue  interfaces.ts  main.ts  utils.ts
deep_learning/frontend/src/page/: help.vue  home.vue  predict.vue  upload.vue
deep_learning/src/: config.py  db.py  design.py  machine_learning.py  server.py  setup.py
deep_learning/src/api/: const.py  gene.py  task.py
deep_learning/src/model/: params.py
eCROP/: cite_seq.Rmd  count_sgrna_10x.py  crop_count.py  eCROP_ClusterEnrichments.R  eCROP_Seurat.R  eCROP_UMAPs.R  sgrna_assign.R
editing_analysis/: calculate_freq.R
editing_analysis/calFreq/: README.md  go.mod  go.sum  logger.go  main.go  options.go  reader.go
editing_analysis/decodeFq/: README.md  decode.go  go.mod  go.sum  library.go  logger.go  main.go  needlemanWunsch.go  options.go  reader.go  result.go
editing_analysis/splitFq/: README.md  barcodes.go  go.mod  go.sum  logger.go  main.go  merge.go  options.go  postMerge.go  reader.go  reads.go  scaffold.go  split.go  splitLogic.go  writer.go
example/: barcodes.json  files.json  library.json
frontend/: components.d.ts  index.html  pnpm-lock.yaml
prediction/: example_input.csv  example_output.csv  prediction.py
src/: machine_learning.py  train.py
src/api/: data.py  results.py
src/model/: features.py  model.py  params.py
(+4 files in other folders)
