[project]
name = "procas12f"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "catboost>=1.2.8",
    "click>=8.2.1",
    "cmaes>=0.12.0",
    "einops>=0.8.1",
    "flask>=3.1.1",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "onnx>=1.20.0",
    "onnxruntime>=1.22.1",
    "onnxscript>=0.5.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "peewee>=3.18.2",
    "psycopg2-binary>=2.9.11",
    "pyopencl>=2025.2.7",
    "pysam>=0.23.3",
    "pytorch-lightning>=2.6.0",
    "regex>=2024.11.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "viennarna>=2.7.0",
]

[tool.uv.workspace]
members = [
    "procas12f",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"  },

]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"  },
]


[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch-cu126"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "optuna>=4.6.0",
    "flask-cors>=6.0.1",
    "onnxruntime-gpu>=1.23.2"
]
